--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 			<td> <h4> Which of these Programming Languages are related to JavaScript? </h4> </td>
 		</tr>
 	 <tr>
-	 	<td> <button class="btn btn-success  btn-outline-light btn-xl"> <a href="https://youtu.be/nni9G_Sg8Vs"> Python  </a></button></td>
+	 	<td> <button class="btn btn-success  btn-outline-light btn-xl"> <a href="https://manuelfortuna1.github.io/Main-Menu/"> Python  </a></button></td>
 	 </tr>
 	 	 <tr>
-	 	<td> <button class="btn btn-success  btn-outline-light btn-xl"> <a href="https://youtu.be/nni9G_Sg8Vs"> C++ </a></button></td>
+	 	<td> <button class="btn btn-success  btn-outline-light btn-xl"> <a href="https://manuelfortuna1.github.io/Main-Menu/"> C++ </a></button></td>
 	 </tr>
 	 	 <tr>
-	 	<td> <button class="btn btn-success btn- btn-outline-light btn-xl"> <a href="https://youtu.be/nni9G_Sg8Vs"> LiveScript (Correct) </a></button></td>
+	 	<td> <button class="btn btn-success btn- btn-outline-light btn-xl"> <a href="https://manuelfortuna1.github.io/Question-five/"> LiveScript (Correct) </a></button></td>
 	 </tr>
 	 	 <tr>
-	 	<td> <button class="btn btn-success  btn-outline-light btn-xl"> <a href="https://youtu.be/nni9G_Sg8Vs"> Java </a></button></td>
+	 	<td> <button class="btn btn-success  btn-outline-light btn-xl"> <a href="https://manuelfortuna1.github.io/Main-Menu/"> Java </a></button></td>
 	 </tr>
 	 
 </table>
