--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	 	<td> <button class="btn btn-success  btn-outline-light btn-xl"> <a href="https://manuelfortuna1.github.io/Main-Menu/"> C++ </a></button></td>
 	 </tr>
 	 	 <tr>
-	 	<td> <button class="btn btn-success btn- btn-outline-light btn-xl"> <a href="https://manuelfortuna1.github.io/Question-five/"> LiveScript (Correct) </a></button></td>
+	 	<td> <button class="btn btn-success btn- btn-outline-light btn-xl"> <a href="https://manuelfortuna1.github.io/Question-five/"> LiveScript </a></button></td>
 	 </tr>
 	 	 <tr>
 	 	<td> <button class="btn btn-success  btn-outline-light btn-xl"> <a href="https://manuelfortuna1.github.io/Main-Menu/"> Java </a></button></td>
